Implement reading BoSy file format.

--- a/bosy/Cargo.toml
+++ b/bosy/Cargo.toml
@@ -2,6 +2,11 @@
 name = "bosy"
 version = "0.1.0"
 authors = ["Leander Tentrup <tentrup@react.uni-saarland.de>"]
+edition = "2018"
 
 [dependencies]
 hyperltl = { path = "../hyperltl" }
+clap = "2.32.0"       # parsing command line arguments
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"  # parsing JSON files
