Use nightly compiler to have 2018 edition features in CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-image: "rust:latest"
+#image: "rust:latest"
+image: "rustlang/rust:nightly"
 
 # Install additional packages, like a C compiler and cmake
 #before_script:
