--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ image: "rustlang/rust:nightly"
 # Install additional packages, like a C compiler and cmake
 before_script:
 - apt-get update -yqq
-- apt-get install -yqq --no-install-recommends build-essential cmake
+- apt-get install -yqq --no-install-recommends build-essential cmake llvm-3.9-dev libclang-3.9-dev clang-3.9
 # some cmake stuff requires setting git config
 - git config --global user.email "you@example.com"
 - git config --global user.name "Your Name"
