--- a/bosy/Cargo.toml
+++ b/bosy/Cargo.toml
@@ -13,3 +13,4 @@ clap = "2.32.0"       # parsing command line arguments
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"  # parsing JSON files
+dot = "0.1.4" # graphviz dot visualization
