--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ stages:
   - build
   - test
 
-#image: "rust:latest"
-image: "rustlang/rust:nightly"
+image: "rust:latest"
+#image: "rustlang/rust:nightly"
 
 # Install additional packages, like a C compiler and cmake
 before_script:
